corrected contrast issue via dropping bg, corrected order of heading levels

--- a/assets/_scss/_variables.scss
+++ b/assets/_scss/_variables.scss
@@ -236,7 +236,7 @@ $btn-default-bg:                 #fff !default;
 $btn-default-border:             #ccc !default;
 
 $btn-primary-color:              #fff !default;
-$btn-primary-bg:                 $brand-primary !default;
+$btn-primary-bg:                 #C15806 !default;
 $btn-primary-border:             darken($btn-primary-bg, 5%) !default;
 
 $btn-success-color:              #fff !default;
